<resources>
    <string name="app_name">MeetAPenguin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="query_filter">Filtering results for:</string>

    <string name="title_activity_share_contact">ShareContactActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="edit_sharing_contacts">Edit Sharing Information</string>
    <string name="nav_menu_message">Meet a Penguin</string>
    <string name="save_changes">Save Changes</string>
    <string name="profile">Profile</string>
    <string name="contact_list">Contact List</string>
    <string name="renewal_inbox">Renewal Inbox</string>
    <string name="share">Share</string>
    <string name="scan">Scan</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="search">Search</string>
    <string name="description">description</string>
    <string name="name">name</string>
    <string name="contact_description">description</string>
    <string name="time">time</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="_2_years">2 Years</string>
    <string name="save">Save</string>
    <string name="contact_info_description">description</string>
    <string name="communicate">Communicate</string>
    <string name="no_message_available">Congrats, You read all your messages</string>
    <string name="error_accepting_renew">Error while accepting the contact renew</string>
    <string name="success_accepting_renew">Contact renewed</string>
    <string name="register">register</string>
    <string name="name_login">Your name</string>
    <string name="create_your_profile">Create your profile</string>
    <string name="email_login">Your email</string>
    <string name="user_information">User information</string>
    <string name="your_notes">Your notes</string>
    <string name="login_error">Error during your login</string>
    <string name="error_update_profile_on_cloud">Error while pushing your new profile information to the cloud</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait</string>
    <string name="cant_access_camera">Can\'t access camera. Permission Denied.</string>
    <string name="can_access_camera">Now you can access your camera.</string>
    <string name="one_month">1 Month</string>
    <string name="three_month">3 Months</string>
    <string name="six_month">6 Months</string>
    <string name="one_year">1 Year</string>
    <string name="two_year">2 Years</string>
    <string name="default_zip">94043</string>
    <string name="can_access_location">Now we can access your location</string>
    <string name="cant_access_location">We can\'t access your location</string>
    <string name="qrcode">QR Code</string>
</resources>
