<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/contact_list" />
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_mail_outline_black_24dp"
            android:title="@string/renewal_inbox" />

        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_mail"
                android:icon="@drawable/ic_mail_outline_black_24dp"
                android:title="@string/contact_us" />
        </menu>
    </item>

</menu>
